# modis_sinusoidal_tile_converter

./: MODIS_Sinusoidal_Tile_Grid_Corner_Coordinates.csv  README.md  README_en.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
example/: array_to_tiff.py  convert_coordinate.py  convert_heg_tif_to_sinusoidal_tile.py  coordinate_convert.py
scripts/: get_corner_coordinates_of_modis_sinusoidal_tile.py
src/modis_sinusoidal_tile_converter/: __init__.py  constant.py  convert.py  renderer.py  sinusoidal.py  webmercator.py
